# norx

./: .gitignore  .travis.yml  Cargo.toml  README.md  build.rs
benches/: bench.rs
permutation/: Cargo.toml
permutation/benches/: bench.rs
permutation/src/: lib.rs  portable.rs  x32_ssse3.rs  x64_avx2.rs  x64_ssse3.rs
permutation/tests/: test.rs
src/: common.rs  constant.rs  lib.rs  p1.rs  p4.rs
tests/: kat.rs  kat_config_3241.txt  kat_config_3261.txt  kat_config_6441.txt  kat_config_6444.txt  kat_config_6461.txt  test.rs
tests/aead/: mod.rs
