[package]
name = "norx"
version = "0.1.1"
authors = ["quininer <quininer@live.com>"]
description = "A Parallel and Scalable Authenticated Encryption Algorithm"
repository = "https://github.com/quininer/norx"
keywords = [ "cryptography", "aead" ]
categories = [ "cryptography", "no-std" ]
license = "MIT"
build = "build.rs"

[workspace]
members = [ "permutation" ]

[dependencies]
arrayref = "0.3"
subtle = { version = "2", default-features = false }
byteorder = { version = "1.0", default-features = false }
norx-permutation = { version = "0.1.1", path = "permutation", default-features = false }
if_chain = { version = "1", optional = true }

[build-dependencies]
byteorder = { version = "1.0", default-features = false }
norx-permutation = { version = "0.1.1", path = "permutation", default-features = false }

[dev-dependencies]
rand = "0.7"

[features]
default = [ "W64", "L4", "P1" ]
simd = [ "norx-permutation/simd" ]
W32 = [ "norx-permutation/W32" ]
W64 = [ "norx-permutation/W64" ]
L4 = [ "norx-permutation/L4" ]
L6 = [ "norx-permutation/L6" ]
P1 = []
P4 = [ "if_chain" ]
