[package]
name = "norx-permutation"
version = "0.1.0"
authors = ["quininer <quininer@live.com>"]

[dependencies]
coresimd = { git = "https://github.com/rust-lang-nursery/stdsimd", optional = true }

[features]
default = [ "W64", "L4" ]
simd = [ "coresimd" ]
W8 = []
W16 = []
W32 = []
W64 = []
L4 = []
L6 = []
