[package]
name = "norx-permutation"
version = "0.1.1"
authors = ["quininer <quininer@live.com>"]
description = "NORX Permutation"
repository = "https://github.com/quininer/norx"
license = "MIT"

[dependencies]

[features]
default = [ "W64", "L4" ]
simd = []
W8 = []
W16 = []
W32 = []
W64 = []
L4 = []
L6 = []
