[package]
name = "norx-permutation"
version = "0.1.3"
authors = ["quininer <quininer@live.com>"]
description = "NORX Permutation"
repository = "https://github.com/quininer/norx"
license = "MIT"

[dependencies]
packed_simd = { version = "0.1", features = [ "into_bits" ], optional = true }

[features]
default = [ "W64", "L4" ]
simd = [ "packed_simd" ]
W8 = []
W16 = []
W32 = []
W64 = []
L4 = []
L6 = []
